--- a/index.html
+++ b/index.html
@@ -9,8 +9,11 @@
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <h1>Olá DsMovie</h1>
-  <h2>promoções</h2>
-  <h2>Agenda de filmes</h2>
+  <header>
+    <nav class="container">
+      <h1>DSMovies</h1>
+      <a href="https://github.com/Doglaum" target="_blank">/Doglaum</a>
+    </nav>
+  </header>
 </body>
 </html>
