--- a/index.html
+++ b/index.html
@@ -23,5 +23,18 @@
         </div>
       </nav>
     </header>
+
+    <main>
+      <section id="dsmovie-card-list" class="container">
+        <div class="dsmovie-card">
+          <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/qjGrUmKW78MCFG8PTLDBp67S27p.jpg" alt="Demon Slayer">
+          <div class="dsmovie-card-description">
+            <h3>Demon Slayer (Kimetsu no Yaiba)</h3>
+            <a href="form.html" class="dsmovie-btn">Avaliar</a>
+          </div>
+        </div>
+      </section>
+
+    </main>
   </body>
 </html>
