--- a/index.html
+++ b/index.html
@@ -26,162 +26,11 @@
 
     <main>
       <section id="dsmovie-card-list" class="container">
-        <div class="row">
-          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-            <div class="dsmovie-card">
-              <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/qjGrUmKW78MCFG8PTLDBp67S27p.jpg"
-                alt="Demon Slayer"
-              />
-              <div class="dsmovie-card-description">
-                <h3>Demon Slayer (Kimetsu no Yaiba)</h3>
-                <a href="form.html" class="dsmovie-btn">Avaliar</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-            <div class="dsmovie-card">
-              <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/qjGrUmKW78MCFG8PTLDBp67S27p.jpg"
-                alt="Demon Slayer"
-              />
-              <div class="dsmovie-card-description">
-                <h3>Demon Slayer (Kimetsu no Yaiba)</h3>
-                <a href="form.html" class="dsmovie-btn">Avaliar</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-            <div class="dsmovie-card">
-              <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/qjGrUmKW78MCFG8PTLDBp67S27p.jpg"
-                alt="Demon Slayer"
-              />
-              <div class="dsmovie-card-description">
-                <h3>Demon Slayer (Kimetsu no Yaiba)</h3>
-                <a href="form.html" class="dsmovie-btn">Avaliar</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-            <div class="dsmovie-card">
-              <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/qjGrUmKW78MCFG8PTLDBp67S27p.jpg"
-                alt="Demon Slayer"
-              />
-              <div class="dsmovie-card-description">
-                <h3>Demon Slayer (Kimetsu no Yaiba)</h3>
-                <a href="form.html" class="dsmovie-btn">Avaliar</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-            <div class="dsmovie-card">
-              <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/qjGrUmKW78MCFG8PTLDBp67S27p.jpg"
-                alt="Demon Slayer"
-              />
-              <div class="dsmovie-card-description">
-                <h3>Demon Slayer (Kimetsu no Yaiba)</h3>
-                <a href="form.html" class="dsmovie-btn">Avaliar</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-            <div class="dsmovie-card">
-              <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/qjGrUmKW78MCFG8PTLDBp67S27p.jpg"
-                alt="Demon Slayer"
-              />
-              <div class="dsmovie-card-description">
-                <h3>Demon Slayer (Kimetsu no Yaiba)</h3>
-                <a href="form.html" class="dsmovie-btn">Avaliar</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-            <div class="dsmovie-card">
-              <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/qjGrUmKW78MCFG8PTLDBp67S27p.jpg"
-                alt="Demon Slayer"
-              />
-              <div class="dsmovie-card-description">
-                <h3>Demon Slayer (Kimetsu no Yaiba)</h3>
-                <a href="form.html" class="dsmovie-btn">Avaliar</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-            <div class="dsmovie-card">
-              <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/qjGrUmKW78MCFG8PTLDBp67S27p.jpg"
-                alt="Demon Slayer"
-              />
-              <div class="dsmovie-card-description">
-                <h3>Demon Slayer (Kimetsu no Yaiba)</h3>
-                <a href="form.html" class="dsmovie-btn">Avaliar</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-            <div class="dsmovie-card">
-              <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/qjGrUmKW78MCFG8PTLDBp67S27p.jpg"
-                alt="Demon Slayer"
-              />
-              <div class="dsmovie-card-description">
-                <h3>Demon Slayer (Kimetsu no Yaiba)</h3>
-                <a href="form.html" class="dsmovie-btn">Avaliar</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-            <div class="dsmovie-card">
-              <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/qjGrUmKW78MCFG8PTLDBp67S27p.jpg"
-                alt="Demon Slayer"
-              />
-              <div class="dsmovie-card-description">
-                <h3>Demon Slayer (Kimetsu no Yaiba)</h3>
-                <a href="form.html" class="dsmovie-btn">Avaliar</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-            <div class="dsmovie-card">
-              <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/qjGrUmKW78MCFG8PTLDBp67S27p.jpg"
-                alt="Demon Slayer"
-              />
-              <div class="dsmovie-card-description">
-                <h3>Demon Slayer (Kimetsu no Yaiba)</h3>
-                <a href="form.html" class="dsmovie-btn">Avaliar</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-sm-6 col-lg-4 col-xl-3 mb-3">
-            <div class="dsmovie-card">
-              <img
-                src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/qjGrUmKW78MCFG8PTLDBp67S27p.jpg"
-                alt="Demon Slayer"
-              />
-              <div class="dsmovie-card-description">
-                <h3>Demon Slayer (Kimetsu no Yaiba)</h3>
-                <a href="form.html" class="dsmovie-btn">Avaliar</a>
-              </div>
-            </div>
-          </div>
-          
-
-
-          
+        <div id="create" class="row">
         </div>
       </section>
     </main>
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+    <script src="main.js" type="module"></script>
   </body>
 </html>
