--- a/description.html
+++ b/description.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Descrição</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -29,28 +29,13 @@
         <div class="container dsmovie-form-container">
           <div>
             <div class="dsmovie-card">
-              <img src="https://www.themoviedb.org/t/p/w533_and_h300_bestv2/ewUqXnwiRLhgmGhuksOdLgh49Ch.jpg" alt="">
+              <img src="" alt="" id="img">
               <div class="dsmovie-form-description">
-                <h3>The Witcher</h3>
+                <h3 id="titulo">The Witcher</h3>
                 <form class="dsmovie-form">
-                  <div class="form-group dsmovie-form-group">
-                    <label for="email">Informe seu email</label>
-                    <input class="form-control" type="text" name="email" id="email">
-                  </div>
-                  <div class="form-group dsmovie-form-group">
-                    <label for="score">Informe sua avaliação</label>
-                    <select class="form-control" name="score" id="score">
-                      <option value="1">1</option>
-                      <option value="2">2</option>
-                      <option value="3">3</option>
-                      <option value="4">4</option>
-                      <option value="5">5</option>
-                    </select>
-                  </div>
+                  <p id="descricao"></p>
                   <div class="dsmovie-form-btn-container">
-                    <button type="submit" class="dsmovie-btn">Salvar</button>
-                    <a  class="dsmovie-btn" href="index.html">Cancelar</a>
-
+                    <a  class="dsmovie-btn" href="index.html">Voltar</a>
                   </div>
                 </form>
               
@@ -61,6 +46,7 @@
         </div>
       </section>
     </main>
+    <script src="description.js"></script>
 
   </body>
 </html>
