--- a/description.html
+++ b/description.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <nav class="container">
-        <h1>DSMovies</h1>
+       <a href="./index.html"><h1>DSMovies</h1></a> 
         <div class="dsmovie-contact-container">
           <img src="img/github.svg" alt="" />
           <a href="https://github.com/Doglaum" target="_blank">/Doglaum</a>
@@ -25,28 +25,21 @@
     </header>
 
     <main>
-      <section id="dsmovie-form-section " >
-        <div class="container dsmovie-form-container">
-          <div>
-            <div class="dsmovie-card">
-              <img src="" alt="" id="img">
-              <div class="dsmovie-form-description">
-                <h3 id="titulo">The Witcher</h3>
-                <form class="dsmovie-form">
-                  <p id="descricao"></p>
-                  <div class="dsmovie-form-btn-container">
-                    <a  class="dsmovie-btn" href="index.html">Voltar</a>
-                  </div>
-                </form>
-              
+      <section id="dsmovie-description-section ">
+        <div class="container dsmovie-description-container">
+          <div class="dsmovie-card">
+            <img src="" alt="" id="img" />
+            <div class="dsmovie-description">
+              <h3 id="titulo"></h3>
+              <div class="dsmovie-description">
+                <p id="descricao"></p>
+                <a class="dsmovie-btn" href="index.html">Voltar</a>
               </div>
             </div>
           </div>
-
         </div>
       </section>
     </main>
     <script src="description.js"></script>
-
   </body>
 </html>
