--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <header>
       <nav class="container">
-        <h1>DSMovies</h1>
+        <a href="./index.html"><h1>DSMovies</h1></a>
         <div class="dsmovie-contact-container">
           <img src="img/github.svg" alt="" />
           <a href="https://github.com/Doglaum" target="_blank">/Doglaum</a>
@@ -26,8 +26,7 @@
 
     <main>
       <section id="dsmovie-card-list" class="container">
-        <div id="create" class="row">
-        </div>
+        <div id="create" class="row"></div>
       </section>
     </main>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
